tests/143_string_escape_error.err
pirxc compilation failed: exit status 1
Output: error parsing program: tests/143_string_escape_error.pirx:3:10: invalid escape sequence '\q' in string literal
Error: exit status 1
