tests/143_string_escape_error.pirx
// Unknown escape sequences in string literals are lexing errors.
func main(): int {
  printf("bad \q escape\n");
  return 0;
}
